# cpp_simd_stl

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  SIMD.pptx
benchmarks/: CMakeLists.txt  ClzBenchmark.cpp  ContainsBenchmark.cpp  CountBenchmark.cpp  CtzBenchmark.cpp  EqualBenchmark.cpp  FillBenchmark.cpp  FindBenchmark.cpp  FindLastBenchmark.cpp  MaxBenchmark.cpp  MinBenchmark.cpp  MinmaxBenchmark.cpp  MismatchBenchmark.cpp  RemoveBenchmark.cpp  ReplaceBenchmark.cpp  ReplaceCopyBenchmark.cpp  ReverseBenchmark.cpp  ReverseCopyBenchmark.cpp  SearchBenchmark.cpp  TransformBenchmark.cpp
benchmarks/tools/: BenchmarkHelper.h
cmake/: Util_ExportConfig.cmake  Util_InstallConfig.cmake  Util_InstallRules.cmake  cpp_simd_stlConfig.cmake.in
include/simd_stl/: SimdStlNamespace.h  Types.h
include/simd_stl/algorithm/: Algorithm.h
include/simd_stl/algorithm/batch/: ForEach.h  ForEachN.h
include/simd_stl/algorithm/copy/: Copy.h  CopyBackward.h  CopyN.h  Move.h  MoveBackward.h
include/simd_stl/algorithm/fill/: Fill.h  FillN.h
include/simd_stl/algorithm/find/: AllOf.h  AnyOf.h  Contains.h  Count.h  EndsWith.h  Equal.h  Find.h  FindEnd.h  FindFirstOf.h  FindLast.h  Mismatch.h  NoneOf.h  Search.h  StartsWith.h
include/simd_stl/algorithm/minmax/: Max.h  MaxElement.h  Min.h  Minmax.h
include/simd_stl/algorithm/order/: Reverse.h  ReverseCopy.h
include/simd_stl/algorithm/remove/: Remove.h  RemoveCopy.h
include/simd_stl/algorithm/replace/: Replace.h  ReplaceCopy.h
include/simd_stl/algorithm/swap/: Swap.h
include/simd_stl/algorithm/transform/: Transform.h
include/simd_stl/arch/: CpuFeature.h  CpuId.h  ProcessorDetection.h  ProcessorFeatures.h  ProcessorInformation.h
include/simd_stl/compatibility/: AlignmentMacros.h  BranchPrediction.h  CallingConventions.h  Compatibility.h  CompilerDetection.h  CxxVersionDetection.h  FunctionAttributes.h  Inline.h  LanguageFeatures.h  MemoryMacros.h  Nodiscard.h  SimdCompatibility.h  StaticOperators.h  SystemDetection.h  UnreachableCode.h  Warnings.h
include/simd_stl/concurrency/: Execution.h  Thread.h  ThreadHandle.h  ThreadId.h  ThreadPool.h  ThreadPoolExecutor.h  ThreadPoolTasks.h
include/simd_stl/datapar/: BasicSimd.h  BasicSimdElementReference.h  BasicSimdMask.h  BasicSimdShuffleMask.h  Simd.h  SimdCast.h  SimdCompareResult.h  SimdConfig.h  SimdConvert.h  SimdDataparAlgorithms.h  SimdIndexMask.h
include/simd_stl/math/: BitMath.h  IntegralTypesConversions.h  Math.h
include/simd_stl/memory/: Alignment.h  Intersects.h  PointerToIntegral.h
include/simd_stl/numeric/: BasicSimd.h  BasicSimdElementReference.h  BasicSimdImplementation.h  BasicSimdMask.h  BasicSimdMaskImplementation.h  BasicSimdShuffleMask.h  Simd.h  SimdCast.h  SimdCompareResult.h  SimdConvert.h  SimdIndexMask.h
include/simd_stl/system/: Handle.h
src/simd_stl/algorithm/: AdvanceBytes.h  AlgorithmDebug.h  FixedMemcmp.h  MsvcIteratorUnwrap.h
src/simd_stl/concurrency/: ThreadYield.h  WindowsThread.h  WindowsThreadPool.h  WindowsThreadPoolTasks.h
src/simd_stl/datapar/: Arithmetic.h  BasicSimd.inl  BasicSimdElementReference.inl  BasicSimdMask.inl  Bitwise.h  CachePrefetcher.h  Compare.h  IntrinBitcast.h  IsComparable.h  MaskExpand.h  MaskTypeSelector.h  Memory.h  Reduce.h  Shuffle.h  ShuffleTables.h  SimdArithmetic.h  SimdArithmetic.inl  SimdBroadcast.h  SimdBroadcast.inl  SimdCast.inl  SimdCompare.h  SimdCompare.inl  SimdCompareAdapters.h  SimdCompareAdapters.inl  SimdCompareResult.inl  SimdComparison.h  SimdConvert.h  SimdConvert.inl  SimdDispatcher.h  SimdDivisors.h  SimdElementAccess.h  SimdElementAccess.inl  SimdElementMaskOperations.h  SimdElementMaskOperations.inl  SimdElementWise.h  SimdElementWise.inl  SimdIndexMask.inl  SimdIndexMaskOperations.h  SimdIndexMaskOperations.inl  SimdIntegralTypesCheck.h  (+7 more)
src/simd_stl/math/: BitMath.h  CountLeadingZeros.h  CountTrailingZeros.h  IntegralTypesConversions.h  PopulationCount.h
src/simd_stl/numeric/: BasicSimd.inl  BasicSimdElementReference.inl  BasicSimdImplementationUnspecialized.h  BasicSimdMask.inl  BasicSimdMaskImplementation.inl  CachePrefetcher.h  IntrinBitcast.h  IsComparable.h  MaskExpand.h  MaskTypeSelector.h  ShuffleTables.h  SimdArithmetic.h  SimdArithmetic.inl  SimdBroadcast.h  SimdBroadcast.inl  SimdCast.h  SimdCast.inl  SimdCompare.h  SimdCompare.inl  SimdCompareAdapters.h  SimdCompareAdapters.inl  SimdCompareResult.inl  SimdComparison.h  SimdConvert.h  SimdConvert.inl  SimdDispatcher.h  SimdDivisors.h  SimdElementAccess.h  SimdElementAccess.inl  SimdElementMaskOperations.h  SimdElementMaskOperations.inl  SimdElementWise.h  SimdElementWise.inl  SimdIndexMask.inl  SimdIndexMaskImplementation.h  SimdIndexMaskImplementation.inl  SimdIndexMaskOperations.h  SimdIndexMaskOperations.inl  SimdIntegralTypesCheck.h  SimdMaskCommonOperations.h  (+6 more)
src/simd_stl/type_traits/: CanMemcmpElements.h  ContainerComparison.h  FillMemsetSafety.h  FunctionInformation.h  FunctionPass.h  IntegralProperties.h  Invoke.h  IsConstantEvaluated.h  IsVirtualBaseOf.h  IteratorCategory.h  IteratorCheck.h  LexicographicalCompareTraits.h  OperatorWrappers.h  Ordering.h  SimdAlgorithmSafety.h  SimdTypeCheck.h  SwapSafety.h  TypeCheck.h  TypeTraits.h  UnwrapEnum.h
src/simd_stl/utility/: Assert.h
tests/: CMakeLists.txt  FindTest.cpp
tests/algorithm/: CMakeLists.txt  ContainsTest.cpp  CopyBackwardTest.cpp  CopyTest.cpp  CountTest.cpp  EqualTest.cpp  FillTest.cpp  FindEndTest.cpp  FindFirstOfTest.cpp  FindLastTest.cpp  FindTest.cpp  ForEachTest.cpp  MaxTest.cpp  MinTest.cpp  MinmaxTest.cpp  MismatchTest.cpp  MoveBackwardTest.cpp  MoveTest.cpp  ParallelFindTest.cpp  RemoveCopyTest.cpp  RemoveTest.cpp  ReplaceCopyTest.cpp  ReplaceTest.cpp  ReverseCopyTest.cpp  ReverseTest.cpp  SearchTest.cpp  SimdArithmeticTest.cpp  SimdMethodsTest.cpp  SimdTest.cpp  StartsEndsWithTest.cpp  SwapTest.cpp  TransformTest.cpp
tests/concurrency/: CMakeLists.txt  ThreadPoolTest.cpp  ThreadTest.cpp
tests/math/: CMakeLists.txt  ClzTest.cpp  CtzTest.cpp  PopcntTest.cpp
tests/type_traits/: CMakeLists.txt  InvokeTest.cpp
(+153 files in other folders)
